chore: adding bastion

--- a/generators/aws-swarm-tokens/templates/aws-swarm-tokens/Pulumi.stack.yaml
+++ b/generators/aws-swarm-tokens/templates/aws-swarm-tokens/Pulumi.stack.yaml
@@ -1,4 +1,5 @@
 config:
+  <%= projectName %>:bastionStack: <%= prefix %>-bastion
   <%= projectName %>:leaderStack: <%= prefix %>-leader
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
