chore: changes following code review

--- a/generators/aws-swarm-tokens/templates/aws-swarm-tokens/Pulumi.stack.yaml
+++ b/generators/aws-swarm-tokens/templates/aws-swarm-tokens/Pulumi.stack.yaml
@@ -4,3 +4,4 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
+  <%= projectName %>:user: <%= user %>
