fix(aws/nfs-server): fix resource names

--- a/generators/aws-nfs-server/templates/aws-nfs-server/Pulumi.stack.yaml
+++ b/generators/aws-nfs-server/templates/aws-nfs-server/Pulumi.stack.yaml
@@ -7,7 +7,7 @@ config:
   <%= projectName %>:instanceType: <%= size %>
   <%= projectName %>:keyName: KEYNAME
   <%= projectName %>:keypairsStack: <%= prefix %>-ssh-keypairs
-  <%= projectName %>:name: <%= prefix %>-<%= environment %>
+  <%= projectName %>:name: <%= prefix %>-<%= environment %>-nfs
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:rootBlockDeviceSize: 20
