fix(aws/swarm-leader): fix aws swarm leader generator

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -31,6 +31,7 @@ config:
 #  <%= projectName %>:volumeId:
   <%= projectName %>:volumeStack: <%= prefix %>-ebs
 <% } %>
+  <%= projectName %>:vpcStack: <%= prefix %>-vpc
   <%= projectName %>:useBastion: <%= useBastion %>
   <%= projectName %>:useNFS: <%= useNFS %>
-  <%= projectName %>:vpcStack: aws-swarm-vpc 
+#  <%= projectName %>:vpcId:
