--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -1,8 +1,10 @@
 config:
   <%= projectName %>:ami: <%= ami %>
   <%= projectName %>:availabilityZone: <%= availabilityZone %>
+<% if (useBastion) { %>
 #  <%= projectName %>:bastionSecurityGroupId: 
-#  <%= projectName %>:bastionStack: <%= prefix %>-bastion
+  <%= projectName %>:bastionStack: <%= prefix %>-bastion
+<% } %>
   <%= projectName %>:disableApiTermination: false
   <%= projectName %>:dockerNetworks: <% networks.forEach((network) => { %>
     - <%= network %><% }); %>
@@ -25,7 +27,9 @@ config:
 #  <%= projectName %>:securityGroupIds:
   <%= projectName %>:securityGroupStack: <%= prefix %>-security-group
   <%= projectName %>:subnetId: subnet-XXXXXXXXXXXXXXXX
+<% if (!useNfs) { %>
 #  <%= projectName %>:volumeId:
   <%= projectName %>:volumeStack: <%= prefix %>-ebs
+<% } %>
   <%= projectName %>:useNfs: <%= useNFS %>
   <%= projectName %>:vpcStack: aws-swarm-vpc 
