fix(aws/swarm-leader): update swarm leader generator

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -27,9 +27,10 @@ config:
 #  <%= projectName %>:securityGroupIds:
   <%= projectName %>:securityGroupStack: <%= prefix %>-security-group
   <%= projectName %>:subnetId: subnet-XXXXXXXXXXXXXXXX
-<% if (!useNfs) { %>
+<% if (!useNFS) { %>
 #  <%= projectName %>:volumeId:
   <%= projectName %>:volumeStack: <%= prefix %>-ebs
-<% } %>
+<% } else { %>
   <%= projectName %>:useNfs: <%= useNFS %>
+<% } %>
   <%= projectName %>:vpcStack: aws-swarm-vpc 
