fix(aws/security-groups): add ssh-bastion security group

--- a/generators/aws-security-groups/templates/aws-security-groups/Pulumi.stack.yaml
+++ b/generators/aws-security-groups/templates/aws-security-groups/Pulumi.stack.yaml
@@ -9,5 +9,6 @@ config:
     # - swarm-managers
     # - swarm-workers
     # - ssh
+    # ssh-bastion
     - web
   <%= projectName %>:vpcStack: <%= prefix %>-vpc
