fix(aws/swarm-leader): fix swarm leader for use with bastion

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -30,7 +30,7 @@ config:
 <% if (!useNFS) { %>
 #  <%= projectName %>:volumeId:
   <%= projectName %>:volumeStack: <%= prefix %>-ebs
-<% } else { %>
-  <%= projectName %>:useNfs: <%= useNFS %>
 <% } %>
+  <%= projectName %>:useBastion: <%= useBastion %>
+  <%= projectName %>:useNFS: <%= useNFS %>
   <%= projectName %>:vpcStack: aws-swarm-vpc 
