--- a/generators/aws-swarm-tokens/templates/aws-swarm-tokens/Pulumi.stack.yaml
+++ b/generators/aws-swarm-tokens/templates/aws-swarm-tokens/Pulumi.stack.yaml
@@ -1,7 +1,10 @@
 config:
+#  <%= projectName %>:bastionIp: 1.2.3.4
   <%= projectName %>:bastionStack: <%= prefix %>-bastion
-  <%= projectName %>:leaderStack: <%= prefix %>-leader
+#  <%= projectName %>:managerIp: 5.6.7.8
+  <%= projectName %>:managerStack: <%= prefix %>-leader
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
+  <%= projectName %>:useBastion: true
   <%= projectName %>:user: <%= user %>
