feat(aws/swarm-workers-asg): update generator

--- a/generators/aws-swarm-workers-asg/templates/aws-swarm-workers-asg/Pulumi.stack.yaml
+++ b/generators/aws-swarm-workers-asg/templates/aws-swarm-workers-asg/Pulumi.stack.yaml
@@ -7,7 +7,7 @@ config:
   <%= projectName %>:leaderStack: <%= prefix %>-leader
   <%= projectName %>:keyName: <%= keyName %>
   <%= projectName %>:keypairsStack: <%= prefix %>-ssh-keypairs
-  <%= projectName %>:maxSize: 1
+  <%= projectName %>:maxSize: 2
   <%= projectName %>:minSize: 1
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:pathToSshKeysFolder: ../../ssh-keys
@@ -16,5 +16,6 @@ config:
     # - 
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:rootBlockDeviceSize: "16"
-  # <%= projectName %>:securityGroupStack: <%= prefix %>-security-groups
+  <%= projectName %>:securityGroupsStack: <%= prefix %>-security-groups
+  <%= projectName %>:useBastion: false
   <%= projectName %>:vpcStack: <%= prefix %>-vpc
