chore: fix nfs in ansible aws

--- a/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/portainer.yml
+++ b/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/portainer.yml
@@ -3,7 +3,7 @@ portainer__deploy_group: "{{ deploy_group }}"
 portainer__deploy_user: "{{ deploy_user }}"
 portainer__domain: "portainer.{{ domain }}"
 portainer__network: "{{ network_public }}"
-portainer__nfs: "{{ nfs }}"
 portainer__nfs_ip: "{{ nfs_server_ip }}"
 portainer__state: "started"
 portainer__version: latest
+portainer__use_nfs: "{{ nfs }}"
