--- a/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/traefik.yml
+++ b/generators/ansible-aws/templates/ansible/stack/inventory/group_vars/traefik.yml
@@ -4,6 +4,7 @@ traefik__deploy_group: "{{ deploy_group }}"
 traefik__deploy_user: "{{ deploy_user }}"
 traefik__domain: "traefik.{{ domain }}"
 traefik__network: "{{ network_public }}"
-traefik__nfs: "{{ nfs }}"
 traefik__nfs_ip: "{{ nfs_server_ip }}"
 traefik__state: "started"
+traefik__use_nfs: "{{ nfs }}"
+
