--- a/generators/aws-swarm-load-balancer/templates/aws-swarm-load-balancer/Pulumi.stack.yaml
+++ b/generators/aws-swarm-load-balancer/templates/aws-swarm-load-balancer/Pulumi.stack.yaml
@@ -1,4 +1,6 @@
 config:
+  <%= projectName %>:eipStack: <%= prefix %>-lb-eip
+  # <%= projectName %>:certificateStack: aws-certificate
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
