chore: more testing

--- a/generators/ansible-aws/templates/ansible/stack/makefile
+++ b/generators/ansible-aws/templates/ansible/stack/makefile
@@ -6,7 +6,7 @@ ansible-link:
 ansible-link.down:
 	@printf "\033[0;32m>>> Down ansible-link\033[0m\n"
 	ansible-playbook plays/ansible_link.yml --extra-vars="ansible_link__state=stopped"
-	
+
 install:
 	@printf "\033[0;32m>>> Install ansible roles\033[0m\n"
 	ansible-galaxy install -r requirements.yml --force
@@ -30,6 +30,10 @@ postgres:
 ssh-keys:
 	@printf "\033[0;32m>>> Update SSH keys\033[0m\n"
 	ansible-playbook plays/ssh-keys.yml
+
+sync-playbooks:
+	@printf "\033[0;32m>>> Sync ansible-link playbooks\033[0m\n"
+	ansible-playbook plays/sync-playbooks.yml
 
 traefik:
 	@printf "\033[0;32m>>> Set up traefik\033[0m\n"
