feat(pulumi-s3-backend): update code to latest

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/.env.example
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/.env.example
@@ -1,2 +1,3 @@
-AWS_PROFILE=<% if (awsProfile) { %><%= awsProfile %><% } else { %>AWS_PROFILE<% } %>
+AWS_PROFILE=<%= awsProfile %>
+AWS_REGION=<%= awsRegion %>
 PULUMI_ACCESS_TOKEN=SECRET (optional)
