--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -1,9 +1,9 @@
 config:
   <%= projectName %>:aws-account-arns: 
     - 
+  <%= projectName %>:encryptionProvider: <%= encryptionProvider %>  
   <%= projectName %>:forceDestroy: false
 #  <%= projectName %>:keyDeletionWindow: 7
 #  <%= projectName %>:name: 
   <%= projectName %>:protect: true
-  <%= projectName %>:retainOnDelete: true  
-  <%= projectName %>:secretsProvider: passphrase  
+  <%= projectName %>:retainOnDelete: true
