fix(aws/resources): set default of 30 days for recovery window

--- a/generators/aws-resources/templates/aws-resources/Pulumi.stack.yaml
+++ b/generators/aws-resources/templates/aws-resources/Pulumi.stack.yaml
@@ -2,5 +2,5 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:secretRecoveryWindowInDays: 7
+#  <%= projectName %>:secretRecoveryWindowInDays: 30
   <%= projectName %>:useSesSmtp: false
